@@ -5,6 +5,7 @@ TNRS 0.3.1
 ## NEW FEATURES
 * Added progress bar when downloading multiple  batches of records
 * Added an option to skip checks for internet when running functions
+* TNRS "..._score" columns now returned as numeric (rather than character)
 
 ## Bug Fixes
 * Removed a few non-ascii character in the example file which were causing errors in vcr
